# dagshub-mnist

./: dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
dagshub_mnist/: config.py  eval.py  featurization.py  torch_model.py  train_model.py
data/: .gitignore  norm_parameters.json  test_data.csv.dvc  train_data.csv.dvc
metrics/: eval.json  train_metric.json
