[tool.poetry]
name = "dagshub-mnist"
version = "0.1.0"
description = ""
authors = ["Arslan <rslnkrmt2552@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
python-dateutil = "^2.8.1"
pytz = "^2021.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
six = "^1.15.0"
torch = "1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
